--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,8 +8,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Start Dash</a>
+        <a class="navbar-brand" href="#">りっすん</a>
       </div>
+      <!--
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
@@ -41,7 +42,7 @@
             <li><%= link_to "ログイン", new_user_session_path %></li>
           <% end %>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div>--><!--/.nav-collapse -->
     </div>
   </nav>
 </header>
