--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,103 @@ body {
   margin-top: 20px;
 }
 
+// .container {
+//   width: 800px;
+// }
+
 .listen {
   width: 100px;
+}
+
+.balloon {
+  padding-left: 40px;
+}
+
+.comment-area {
+  position: fixed;
+  bottom: 20px;
+  left: 0;
+  background-color: #fa522d;
+  opacity: 0.8;
+  padding: 20px;
+}
+
+/* balloon-1 left */
+.balloon-1-left {
+	position: relative;
+	display: inline-block;
+	padding: 10px;
+	//width: auto;
+	//min-width: 115px;
+	//height: 40px;
+	color: #19283C;
+	background: #F6F6F6;
+	border: 3px solid #19283C;
+	z-index: 0;
+}
+.balloon-1-left:before {
+	content: "";
+	position: absolute;
+	top: 50%; left: -8px;
+	margin-top: -9px;
+	display: block;
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 9px 9px 9px 0;
+	border-color: transparent #F6F6F6 transparent transparent;
+	z-index: 0;
+}
+.balloon-1-left:after {
+	content: "";
+	position: absolute;
+	top: 50%; left: -12px;
+	margin-top: -10px;
+	display: block;
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 10px 10px 10px 0;
+	border-color: transparent #19283C transparent transparent;
+	z-index: -1;
+}
+
+/* balloon-1 right */
+.balloon-1-right {
+	position: relative;
+	display: inline-block;
+	padding: 0 15px;
+	min-width: 115px;
+	height: 40px;
+	line-height: 34px;
+	color: #19283C;
+	background: #F6F6F6;
+	border: 3px solid #19283C;
+	z-index: 0;
+}
+.balloon-1-right:before {
+	content: "";
+	position: absolute;
+	top: 50%; right: -8px;
+	margin-top: -9px;
+	display: block;
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 9px 0 9px 9px;
+	border-color: transparent transparent transparent #F6F6F6;
+	z-index: 0;
+}
+.balloon-1-right:after {
+	content: "";
+	position: absolute;
+	top: 50%; right: -12px;
+	margin-top: -10px;
+	display: block;
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 10px 0 10px 10px;
+	border-color: transparent transparent transparent #19283C;
+	z-index: -1;
 }
