--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">りっすん</a>
+        <a class="navbar-brand" href="#">りっすんbot</a>
       </div>
       <!--
       <div id="navbar" class="navbar-collapse collapse">
