--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -1,23 +1,48 @@
 <div class="container">
   <%= form_tag tops_path, method: :post do %>
-    <% @answer_ids.each_with_index do |answer_id, index| %>
-      <% next if answer_id == 0 %>
-      <div>
-        <%= image_tag 'listen.jpg', class: 'listen' %><%= simple_format Answer.find(answer_id).text %>
-        <%= hidden_field_tag 'answer_ids[]', answer_id %>
-      </div>
-
-      <% if @texts[index].present? %>
-        <div>
-          <%= image_tag 'silhouette.png', class: 'listen' %><%= simple_format  @texts[index] %>
-          <%= hidden_field_tag 'texts[]', @texts[index] %>
+    <div class="col-sm-8 col-sm-offset-2">
+      <% @answer_ids.each_with_index do |answer_id, index| %>
+        <% next if answer_id == 0 %>
+        <div class="row">
+          <div class="col-sm-2 text-center">
+            りっすん<br />
+            <%= image_tag 'listen.jpg', class: 'listen' %>
+          </div>
+          <div class="col-sm-8 balloon-1-left">
+            <%= simple_format Answer.find(answer_id).text %>
+            <%= hidden_field_tag 'answer_ids[]', answer_id %>
+          </div>
+          <div class="col-sm-2"></div>
         </div>
-      <% end %>
-    <% end %>
+        <br />
 
-    <div class="col-sm-12 text-center">
-      <%= text_field_tag :text %>
-      <%= submit_tag '回答する' %>
+        <% if @texts[index].present? %>
+          <div class="row">
+            <div class="col-sm-8 col-sm-offset-2 balloon-1-right">
+              <%= simple_format  @texts[index] %>
+              <%= hidden_field_tag 'texts[]', @texts[index] %>
+            </div>
+            <div class="col-sm-2 text-center">
+              あなた<br />
+              <%= image_tag 'silhouette.png', class: 'listen' %>
+            </div>
+          </div>
+          <br />
+        <% end %>
+      <% end %>
+
+      <br />
+      <br />
+      <br />
+  </div>
+
+  <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
+    <div class="col-sm-10">
+      <%= text_field_tag :text, nil, placeholder: '質問を入れてください', class: 'form-control' %>
     </div>
+    <div class="col-sm-2 text-left">
+      <%= submit_tag '質問する', class: 'btn btn-default' %>
+    </div>
+  </div>
   <% end %>
 </div>
