トレーニングセットを追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,9 @@
         </button>
         <a class="navbar-brand" href="#">りっすんbot</a>
       </div>
-      <!--
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
+          <!--
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -28,21 +28,13 @@
               <li><a href="#">One more separated link</a></li>
             </ul>
           </li>
+        -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <%# user_signed_in? はユーザがログインしているか調べるdeviseのHelperメソッド %>
-          <% if user_signed_in? %>
-            <%# current_user は現在ログインしているUserオブジェクトを返すdeviseのHelperメソッド %>
-            <%# *_path はUserモデルを作成したときに、
-              #    deviseにより自動で作成されてますので、rake routesで確認できます %>
-            <li><%= link_to current_user.email, edit_user_registration_path %></li>
-            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
-          <% else %>
-            <li><%= link_to "サインアップ", new_user_registration_path %></li>
-            <li><%= link_to "ログイン", new_user_session_path %></li>
-          <% end %>
+          <li><%= link_to "My-ope", 'http://www.my-ope.net', target: '_blank' %></li>
+          <li><%= link_to "このチャットbotについて", 'http://www.my-ope.net/#about', target: '_blank' %></li>
         </ul>
-      </div>--><!--/.nav-collapse -->
+      </div><!--/.nav-collapse -->
     </div>
   </nav>
 </header>
