--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,55 +1,39 @@
 <div class="container">
-  <%= form_tag tops_path, method: :post do %>
-    <div class="col-sm-8 col-sm-offset-2">
-      <% @answer_ids.each_with_index do |answer_id, index| %>
-        <% next if answer_id == 0 %>
+  <div class="col-sm-8 col-sm-offset-2">
+    <% @chat.messages.each do |message| %>
+      <% if message.bot? %>
         <div class="row">
           <div class="col-sm-2 text-center">
-            りっすん<br />
+            どんうさぎ<br />
             <%= image_tag 'usao001.png', class: 'listen' %>
           </div>
           <div class="col-sm-8 balloon-1-left">
-            <%= simple_format Answer.find(answer_id).text %>
-            <%= hidden_field_tag 'answer_ids[]', answer_id %>
+            <%= message.body %><br />
+            <%#= simple_format Answer.find(answer_id).text %>
+            <%#= hidden_field_tag 'answer_ids[]', answer_id %>
           </div>
           <div class="col-sm-2"></div>
         </div>
-        <br />
-
-        <% if @texts[index].present? %>
-          <% if @texts[index] == 'MAGIC_WORD' %>
-            <div class="row">
-              <%= hidden_field_tag 'texts[]', @texts[index] %>
-            </div>
-            <br />
-          <% else %>
-            <div class="row">
-              <div class="col-sm-8 col-sm-offset-2 balloon-1-right">
-                <%= simple_format  @texts[index] %>
-                <%= hidden_field_tag 'texts[]', @texts[index] %>
-              </div>
-              <div class="col-sm-2 text-center">
-                あなた<br />
-                <%= image_tag 'silhouette.png', class: 'listen' %>
-              </div>
-            </div>
-            <br />
-          <% end %>
-        <% end %>
-
+      <% elsif message.guest? %>
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2 balloon-1-right">
+            <%= message.body %>
+            <%#= simple_format  @texts[index] %>
+            <%#= hidden_field_tag 'texts[]', @texts[index] %>
+          </div>
+          <div class="col-sm-2 text-center">
+            あなた<br />
+            <%= image_tag 'silhouette.png', class: 'listen' %>
+          </div>
+        </div>
       <% end %>
-      <br />
-      <br />
-      <br />
+    <% end %>
   </div>
 
-  <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
-    <div class="col-sm-10">
-      <%= text_field_tag :text, nil, placeholder: '質問を入れてください', class: 'form-control' %>
+  <%= bootstrap_form_for @chat.messages.build, url: chats_path do |f| %>
+    <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
+      <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
+      <%= f.submit '質問する', class: 'btn btn-default' %>
     </div>
-    <div class="col-sm-2 text-left">
-      <%= submit_tag '質問する', class: 'btn btn-default' %>
-    </div>
-  </div>
   <% end %>
 </div>
