--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -34,6 +34,7 @@
     <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
       <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
       <%= f.submit '質問する', class: 'btn btn-default' %>
+      <%= link_to 'クリアする', chats_path, method: :delete, class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
