--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">りっすんbot</a>
+        <%= link_to 'My-ope', admin_user_signed_in? ? dashboards_path : '#', class: "navbar-brand" %>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -16,24 +16,20 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
         -->
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "My-ope", 'http://www.my-ope.net', target: '_blank' %></li>
-          <li><%= link_to "このチャットbotについて", 'http://www.my-ope.net/#about', target: '_blank' %></li>
-        </ul>
+        <% if admin_user_signed_in? %>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ&nbsp;<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to '回答', rails_admin.index_path(model_name: :message) %></li>
+                <li><a href="#">文脈</a></li>
+              </ul>
+            </li>
+            <li><%= link_to "ログアウト", destroy_admin_user_session_path, method: :delete %></li>
+          </ul>
+        <% end %>
       </div><!--/.nav-collapse -->
     </div>
   </nav>
