--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,11 +20,12 @@
         </ul>
         <% if admin_user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Botを育てる", grows_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ&nbsp;<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to '回答', rails_admin.index_path(model_name: :message) %></li>
-                <li><a href="#">文脈</a></li>
+                <li><%= link_to '回答', rails_admin.index_path(model_name: :answer) %></li>
+                <li><%= link_to '文脈', rails_admin.index_path(model_name: :context) %></li>
               </ul>
             </li>
             <li><%= link_to "ログアウト", destroy_admin_user_session_path, method: :delete %></li>
