育成画面でguestのメッセージを登録出来るようにする

--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -1,2 +1,36 @@
-<%= link_to t('helpers.link.edit'), edit_training_path(@training), class: "btn btn-default" %>
-<%= link_to t('helpers.link.back'), trainings_path, class: "btn btn-default" %>
+<div class="container">
+  <div class="col-sm-8 col-sm-offset-2">
+    <% @training.training_messages.each do |training_message| %>
+      <% if training_message.bot? %>
+        <div class="row">
+          <div class="col-sm-2 text-center">
+            どんうさぎ<br />
+            <%= image_tag 'usao001.png', class: 'listen' %>
+          </div>
+          <div class="col-sm-8 balloon-1-left">
+            <%= training_message.body %><br />
+          </div>
+          <div class="col-sm-2"></div>
+        </div>
+      <% elsif training_message.guest? %>
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2 balloon-1-right">
+            <%= training_message.body %>
+          </div>
+          <div class="col-sm-2 text-center">
+            あなた<br />
+            <%= image_tag 'silhouette.png', class: 'listen' %>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+
+  <%= bootstrap_form_for @training.training_messages.build, url: trainings_path do |f| %>
+    <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
+      <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
+      <%= f.submit '質問する', class: 'btn btn-default' %>
+      <%= link_to 'クリアする', chats_path, method: :delete, class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+</div>
