--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
         </ul>
         <% if admin_user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Botを育てる", grows_path %></li>
+            <li><%= link_to "Botを育てる", trainings_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ&nbsp;<span class="caret"></span></a>
               <ul class="dropdown-menu">
