--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -1,3 +1,4 @@
+<% # TODO chatsとほぼ同じ画面なので共通化したい %>
 <div class="container">
   <div class="col-sm-8 col-sm-offset-2">
     <% @training.training_messages.each do |training_message| %>
@@ -8,7 +9,15 @@
             <%= image_tag 'usao001.png', class: 'listen' %>
           </div>
           <div class="col-sm-8 balloon-1-left">
-            <%= training_message.body %><br />
+            <%= bootstrap_form_for [:trainings, training_message.answer] do |f| %>
+              <%= f.text_area :body, hide_label: true %>
+              <%= f.submit '更新する', class: 'btn btn-primary' %>
+            <% end %>
+            <br />
+            <%= bootstrap_form_for Answer.new, url: replace_trainings_answer_path(training_message) do |f| %>
+              <%= f.text_area :body, hide_label: true %>
+              <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+            <% end %>
           </div>
           <div class="col-sm-2"></div>
         </div>
@@ -23,6 +32,7 @@
           </div>
         </div>
       <% end %>
+      <br />
     <% end %>
   </div>
 
@@ -30,7 +40,7 @@
     <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
       <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
       <%= f.submit '質問する', class: 'btn btn-default' %>
-      <%= link_to 'クリアする', chats_path, method: :delete, class: 'btn btn-primary' %>
+      <%= link_to 'このスレッドを完了する', trainings_path, method: :destroy, class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
