--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -40,7 +40,7 @@
     <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
       <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
       <%= f.submit '質問する', class: 'btn btn-default' %>
-      <%= link_to 'このスレッドを完了する', trainings_path, method: :destroy, class: 'btn btn-primary' %>
+      <%= link_to 'このスレッドを完了する', trainings_complete_path, method: :post, class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
