--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,8 +3,9 @@
 @import "devise_bootstrap_views";
 
 body {
-  min-height: 2000px;
+  //min-height: 2000px;
   padding-top: 51px;
+  padding-bottom: 250px;
 }
 
 .container-main {
