--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -10,6 +10,7 @@
           </div>
           <div class="col-sm-8 balloon-1-left">
             <% if @training.training_messages.last == training_message # && !training_message.id == Answer::START_MESSAGE_ID %>
+              <span id="last-message" />
               <%= bootstrap_form_for [:trainings, training_message.answer] do |f| %>
                 <%= f.text_area :body, hide_label: true %>
                 <%= f.submit '更新する', class: 'btn btn-primary' %>
