--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -2,31 +2,11 @@
   <div class="col-sm-8 col-sm-offset-2">
     <% @chat.messages.each do |message| %>
       <% if message.bot? %>
-        <div class="row">
-          <div class="col-sm-2 text-center">
-            どんうさぎ<br />
-            <%= image_tag 'usao001.png', class: 'listen' %>
-          </div>
-          <div class="col-sm-8 balloon-1-left">
-            <%= message.body %><br />
-            <%#= simple_format Answer.find(answer_id).text %>
-            <%#= hidden_field_tag 'answer_ids[]', answer_id %>
-          </div>
-          <div class="col-sm-2"></div>
-        </div>
+        <%= render 'bot', message: message  %>
       <% elsif message.guest? %>
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2 balloon-1-right">
-            <%= message.body %>
-            <%#= simple_format  @texts[index] %>
-            <%#= hidden_field_tag 'texts[]', @texts[index] %>
-          </div>
-          <div class="col-sm-2 text-center">
-            あなた<br />
-            <%= image_tag 'silhouette.png', class: 'listen' %>
-          </div>
-        </div>
+        <%= render 'guest', message: message  %>
       <% end %>
+      <br />
     <% end %>
   </div>
 
