--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -2,19 +2,19 @@
   <div class="col-sm-8 col-sm-offset-2">
     <% @training.training_messages.each do |training_message| %>
       <% if training_message.bot? %>
-        <%= render 'chats/bot', messages: @training.training_messages, message: training_message %>
+        <%#= render 'chats/bot', messages: @training.training_messages, message: training_message %>
       <% elsif training_message.guest? %>
-        <%= render 'chats/guest', message: training_message %>
+        <%#= render 'chats/guest', message: training_message %>
       <% end %>
       <br />
     <% end %>
   </div>
 
-  <%= bootstrap_form_for @training.training_messages.build, url: trainings_path do |f| %>
+  <%= bootstrap_form_for [@training, @training.training_messages.build] do |f| %>
     <div class="col-sm-8 col-sm-offset-2 text-center comment-area">
       <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
       <%= f.submit '質問する', class: 'btn btn-default' %>
-      <%= link_to 'このスレッドを完了する', new_trainings_path, class: 'btn btn-primary' %>
+      <%#= link_to 'このスレッドを完了する', new_trainings_path, class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
