AnswersController#replaceにtraining_idを渡すように修正

--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -6,17 +6,17 @@
   <div class="col-sm-8 balloon-1-left">
     <% if message.class == TrainingMessage && messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID %>
       <span id="last-message" />
-      <%= bootstrap_form_for [:trainings, message.answer] do |f| %>
-        <%= f.text_area :body, hide_label: true %>
-        <%= f.submit '更新する', class: 'btn btn-primary' %>
-      <% end %>
+      <%#= bootstrap_form_for [:trainings, message.answer] do |f| %>
+        <%#= f.text_area :body, hide_label: true %>
+        <%#= f.submit '更新する', class: 'btn btn-primary' %>
+      <%# end %>
       <br />
-      <%= bootstrap_form_for [:trainings, message] do |f| %>
-        <%= f.collection_select :answer_id, Answer.all, :id, :body %>
-        <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
-      <% end %>
+      <%#= bootstrap_form_for [:trainings, message] do |f| %>
+        <%#= f.collection_select :answer_id, Answer.all, :id, :body %>
+        <%#= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+      <%# end %>
       <br />
-      <%= bootstrap_form_for Answer.new, url: replace_trainings_answer_path(message) do |f| %>
+      <%= bootstrap_form_for Answer.new, url: replace_training_answer_path(message.training, message) do |f| %>
         <%= f.text_area :body, hide_label: true %>
         <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
       <% end %>
