Trainings::TrainingMessagesController#updateにtraining_idが付くように修正する

--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -11,10 +11,10 @@
         <%= f.submit '更新する', class: 'btn btn-primary' %>
       <% end %>
       <br />
-      <%#= bootstrap_form_for [:trainings, message] do |f| %>
-        <%#= f.collection_select :answer_id, Answer.all, :id, :body %>
-        <%#= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
-      <%# end %>
+      <%= bootstrap_form_for [message.training, message] do |f| %>
+        <%= f.collection_select :answer_id, Answer.all, :id, :body %>
+        <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+      <% end %>
       <br />
       <%= bootstrap_form_for Answer.new, url: replace_training_answer_path(message.training, message) do |f| %>
         <%= f.text_area :body, hide_label: true %>
