chatでも一番最新のメッセージが見えるようにする

--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -4,21 +4,25 @@
     <%= image_tag 'usao001.png', class: 'listen' %>
   </div>
   <div class="col-sm-8 balloon-1-left">
-    <% if message.class == TrainingMessage && messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID %>
+    <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
       <span id="last-message" />
-      <%= bootstrap_form_for [message.training, message.answer] do |f| %>
-        <%= f.text_area :body, hide_label: true %>
-        <%= f.submit '更新する', class: 'btn btn-primary' %>
-      <% end %>
-      <br />
-      <%= bootstrap_form_for [message.training, message] do |f| %>
-        <%= f.collection_select :answer_id, Answer.all, :id, :body %>
-        <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
-      <% end %>
-      <br />
-      <%= bootstrap_form_for Answer.new, url: replace_training_answer_path(message.training, message) do |f| %>
-        <%= f.text_area :body, hide_label: true %>
-        <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+      <% if message.class == TrainingMessage %>
+        <%= bootstrap_form_for [message.training, message.answer] do |f| %>
+          <%= f.text_area :body, hide_label: true %>
+          <%= f.submit '更新する', class: 'btn btn-primary' %>
+        <% end %>
+        <br />
+        <%= bootstrap_form_for [message.training, message] do |f| %>
+          <%= f.collection_select :answer_id, Answer.all, :id, :body %>
+          <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+        <% end %>
+        <br />
+        <%= bootstrap_form_for Answer.new, url: replace_training_answer_path(message.training, message) do |f| %>
+          <%= f.text_area :body, hide_label: true %>
+          <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+        <% end %>
+      <% else %>
+      <%= simple_format(message.body) %>
       <% end %>
     <% else %>
       <%= simple_format(message.body) %>
