レスポンシブ対応

--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-sm-2 text-center">
-    どんうさぎ<br />
+  <div class="col-sm-2 col-xs-3 text-center col-icon">
+    <span class="small">どんうさぎ</span><br />
     <%= image_tag 'usao001.png', class: 'listen' %>
   </div>
-  <div class="col-sm-8 balloon-1-left">
+  <div class="col-sm-8 col-xs-9 balloon-1-left">
     <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
       <span id="last-message" />
       <% if message.class == TrainingMessage %>
