--- a/app/views/chats/_guest.html.erb
+++ b/app/views/chats/_guest.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-sm-8 col-sm-offset-2 balloon-1-right">
+  <div class="col-sm-8 col-sm-offset-2 col-xs-9 balloon-1-right">
     <%= simple_format message.body %>
   </div>
-  <div class="col-sm-2 text-center">
+  <div class="col-sm-2 col-xs-3 text-center">
     あなた<br />
     <%= image_tag 'silhouette.png', class: 'listen' %>
   </div>
