--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,12 +12,19 @@ body {
   margin-top: 20px;
 }
 
-// .container {
-//   width: 800px;
-// }
+.container {
+  padding-left: 5px;
+  padding-right: 5px;
+}
 
 .listen {
-  width: 100px;
+  width: 100%;
+  max-width: 100px;
+}
+
+.col-icon {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .balloon {
