--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,11 +33,20 @@ body {
 
 .comment-area {
   position: fixed;
-  bottom: 20px;
+  bottom: 3px;
   left: 0;
   background-color: #fa522d;
   opacity: 0.8;
   padding: 20px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+}
+
+.balloon {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
 }
 
 /* balloon-1 left */
@@ -45,12 +54,9 @@ body {
 	position: relative;
 	display: inline-block;
 	padding: 10px;
-	//width: auto;
-	//min-width: 115px;
-	//height: 40px;
 	color: #19283C;
+  border: 2px solid #19283C;
 	background: #F6F6F6;
-	border: 3px solid #19283C;
 	z-index: 0;
 }
 .balloon-1-left:before {
@@ -62,7 +68,7 @@ body {
 	width: 0px;
 	height: 0px;
 	border-style: solid;
-	border-width: 9px 9px 9px 0;
+	border-width: 9px 8px 9px 0;
 	border-color: transparent #F6F6F6 transparent transparent;
 	z-index: 0;
 }
@@ -75,7 +81,7 @@ body {
 	width: 0px;
 	height: 0px;
 	border-style: solid;
-	border-width: 10px 10px 10px 0;
+	border-width: 10px 11px 10px 0;
 	border-color: transparent #19283C transparent transparent;
 	z-index: -1;
 }
@@ -90,7 +96,7 @@ body {
 	line-height: 34px;
 	color: #19283C;
 	background: #F6F6F6;
-	border: 3px solid #19283C;
+	border: 2px solid #19283C;
 	z-index: 0;
 }
 .balloon-1-right:before {
@@ -102,7 +108,7 @@ body {
 	width: 0px;
 	height: 0px;
 	border-style: solid;
-	border-width: 9px 0 9px 9px;
+	border-width: 9px 0 9px 8px;
 	border-color: transparent transparent transparent #F6F6F6;
 	z-index: 0;
 }
@@ -115,7 +121,7 @@ body {
 	width: 0px;
 	height: 0px;
 	border-style: solid;
-	border-width: 10px 0 10px 10px;
+	border-width: 10px 1px 10px 10px;
 	border-color: transparent transparent transparent #19283C;
 	z-index: -1;
 }
