--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -12,9 +12,13 @@
 
   <%= bootstrap_form_for @chat.messages.build, url: chats_messages_path do |f| %>
     <div class="col-sm-8 col-sm-offset-2 col-xs-12 text-center comment-area">
-      <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
-      <%= f.submit '質問する', class: 'btn btn-default' %>
-      <%= link_to 'クリアする', chats_path, method: :delete, class: 'btn btn-primary' %>
+      <div class="input-group">
+        <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
+        <span class="input-group-btn">
+          <%= f.submit '質問する', class: 'btn btn-primary' %>
+          <%= link_to 'クリアする', chats_path, method: :delete, class: 'btn btn-default' %>
+        </span>
+      </div>
     </div>
   <% end %>
 </div>
