--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <%= render 'layouts/header' %>
+  <% unless params[:embed] == '1' %>
+    <%= render 'layouts/header' %>
+  <% end %>
   <%= render "shared/flash" %>
   <div class="container container-main">
     <%= yield %>
