--- a/app/views/chats/_guest.html.erb
+++ b/app/views/chats/_guest.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2 col-xs-9 balloon-1-right balloon">
-    <%= simple_format message.body %>
+    <%= auto_link(simple_format(message.body)) %>
   </div>
   <div class="col-sm-2 col-xs-3 text-center">
     あなた<br />
