特定の発言をするとコンテキストを固定する

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,4 +1,12 @@
 <div class="container">
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4 col-xs-12 text-center context">
+      hogehoge
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
+
   <div class="col-sm-8 col-sm-offset-2 chat-area">
     <% @chat.messages.each do |message| %>
       <% if message.bot? %>
@@ -14,6 +22,7 @@
     <div class="col-sm-8 col-sm-offset-2 col-xs-12 text-center comment-area">
       <div class="input-group">
         <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
+        <%= f.hidden_field :context %>
         <span class="input-group-btn">
           <%= f.submit '質問する', class: 'btn btn-primary question' %>
           <%= link_to 'クリアする', chats_path, method: :delete, class: 'btn btn-default' %>
