--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,6 +43,16 @@ body {
   -moz-border-radius: 5px;
 }
 
+.context {
+  position: fixed;
+  top: 8px;
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 9999;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+}
+
 .balloon {
   border-radius: 10px;
   -webkit-border-radius: 10px;
