--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,12 +1,5 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm-4"></div>
-    <div class="col-sm-4 col-xs-12 text-center context">
-      hogehoge
-    </div>
-    <div class="col-sm-4"></div>
-  </div>
-
+  <div class="col-sm-4 col-sm-offset-3 col-xs-12 text-center context alert-success"></div>
   <div class="col-sm-8 col-sm-offset-2 chat-area">
     <% @chat.messages.each do |message| %>
       <% if message.bot? %>
