emailのバリデーション

--- a/app/views/contact_mailer/create.text.erb
+++ b/app/views/contact_mailer/create.text.erb
@@ -1,5 +1,5 @@
 お問い合わせがありました。
 
-名前: <% @contact_state.name %>
-メールアドレス: <% @contact_state.email %>
-内容: <% @contact_state.body %>
+名前: <%= @contact_state.name %>
+メールアドレス: <%= @contact_state.email %>
+内容: <%= @contact_state.body %>
