--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,7 @@
         <% if admin_user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Botを育てる", new_training_path %></li>
+            <li><%= link_to "学習を実行する", learning_path, method: :patch %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ&nbsp;<span class="caret"></span></a>
               <ul class="dropdown-menu">
