学習時のアラートが隠れてしまっていたので見えるように修正

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,13 @@ body {
   -moz-border-radius: 5px;
 }
 
+.alert-main {
+  position: fixed;
+  top: 50px;
+  width: 100%;
+  z-index: 100;
+}
+
 .balloon {
   border-radius: 10px;
   -webkit-border-radius: 10px;
