--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,9 +1,18 @@
 <% if flash[:notice] %>
-  <div class="alert alert-success"><%= notice %></div>
+  <div class="alert alert-main alert-dismissible alert-success">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <%= notice %>
+  </div>
 <% end %>
 <% if flash[:error] %>
-  <div class="alert alert-danger"><%= flash[:error] %></div>
+  <div class="alert alert-main alert-dismissible alert-danger">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <%= flash[:error] %>
+  </div>
 <% end %>
 <% if flash[:alert] %>
-  <div class="alert alert-danger"><%= alert %></div>
+  <div class="alert alert-main alert-dismissible alert-danger">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <%= alert %>
+  </div>
 <% end %>
