trainingsの画面が開けるところまで実装

--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -14,6 +14,7 @@
         <td><%= bot.name %></td>
         <td>
           <%= link_to 'チャットする', new_bot_chats_path(bot), class: "btn btn-default" %>
+          <%= link_to "Botを育てる", new_bot_training_path(bot), class: 'btn btn-primary' %>
           <%#=  link_to t('helpers.link.edit'), edit_message_path(message), class: "btn btn-default" %>
           <%#= link_to t('helpers.link.destroy'), message, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %>
         </td>
