画面から学習をキック出来るようにする

--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -15,8 +15,7 @@
         <td>
           <%= link_to 'チャットする', new_bot_chats_path(bot), class: "btn btn-default" %>
           <%= link_to "Botを育てる", new_bot_training_path(bot), class: 'btn btn-primary' %>
-          <%#=  link_to t('helpers.link.edit'), edit_message_path(message), class: "btn btn-default" %>
-          <%#= link_to t('helpers.link.destroy'), message, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %>
+          <%= link_to "学習を実行する", bot_learning_path(bot), method: :patch, class: 'btn btn-danger' %>
         </td>
       </tr>
     <% end %>
