--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -24,4 +24,4 @@
 
 <br>
 
-<%#= link_to t('helpers.link.new'), new_message_path, class: "btn btn-default" %>
+<%#= link_to '新規登録', new_bot_path, class: "btn btn-default" %>
