--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,13 +21,14 @@
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Bot管理", bots_path %></li>
-            <li class="dropdown">
+            <li><%= link_to "管理者画面", rails_admin_path %></li>
+            <!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ&nbsp;<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to '回答', rails_admin.index_path(model_name: :answer) %></li>
-                <li><%= link_to '文脈', rails_admin.index_path(model_name: :context) %></li>
+                <li><%#= link_to '回答', rails_admin.index_path(model_name: :answer) %></li>
+                <li><%#= link_to '文脈', rails_admin.index_path(model_name: :context) %></li>
               </ul>
-            </li>
+            </li>-->
             <li><%= link_to "ログアウト", destroy_admin_user_session_path, method: :delete %></li>
           </ul>
         <% end %>
