--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -13,7 +13,7 @@
         <% end %>
         <br />
         <%= bootstrap_form_for [bot, message.training, message] do |f| %>
-          <%= f.collection_select :answer_id, Answer.all, :id, :body %>
+          <%= f.collection_select :answer_id, bot.answers, :id, :body %>
           <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
         <% end %>
         <br />
