--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -14,6 +14,7 @@
         <td><%= bot.name %></td>
         <td>
           <%= link_to 'チャットする', new_bot_chats_path(bot), class: "btn btn-default" %>
+          <%= link_to 'チャットする(ヘルプデスク)', new_bot_helpdesks_path(bot), class: 'btn btn-default' %>
           <%= link_to "Botを育てる", new_bot_training_path(bot), class: 'btn btn-primary' %>
           <%= link_to "学習を実行する", bot_learning_path(bot), method: :patch, class: 'btn btn-danger' %>
         </td>
