--- a/app/views/helpdesks/new.html.erb
+++ b/app/views/helpdesks/new.html.erb
@@ -1,16 +1,7 @@
 <%# HACK chatsやtrainingsとビューが重複する。いずれ共通化したい。  %>
 <div class="container">
   <div class="col-sm-8 col-sm-offset-2 chat-area">
-    <div class="row">
-      <div class="col-sm-2 col-xs-3 text-center col-icon">
-        <span class="small">どんうさぎ</span><br />
-        <%= image_tag 'usao001.png', class: 'listen' %>
-      </div>
-      <div class="col-sm-8 col-xs-9 balloon-1-left balloon">
-        <%= auto_link(simple_format(@bot.start_answer.body), html: { target: '_blank' }) %>
-      </div>
-      <div class="col-sm-2"></div>
-    </div>
+    <%= render 'bot', bot: @bot, help_answer: @bot.start_answer %>
   </div>
 
   <%= bootstrap_form_tag url: bot_helpdesks_path(@bot), remote: true do |f| %>
@@ -19,7 +10,7 @@
         <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
         <span class="input-group-btn">
           <%= f.submit '質問する', class: 'btn btn-primary question' %>
-          <%#= link_to 'クリアする', bot_chats_path, method: :delete, class: 'btn btn-default' %>
+          <%= link_to 'クリアする', new_bot_helpdesks_path(@bot), class: 'btn btn-default' %>
         </span>
       </div>
     </div>
