--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-2 col-xs-3 text-center col-icon">
     <span class="small"><%= message.parent.bot.name %></span><br />
-    <%= image_tag message.parent.bot.image_url, class: 'listen' %>
+    <%= image_tag message.parent.bot.image_url || 'operator', class: 'listen' %>
   </div>
   <div class="col-sm-8 col-xs-9 balloon-1-left balloon">
     <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
