育てる機能のautoモードを実装(途中)

--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -14,6 +14,7 @@
         <br />
         <%= bootstrap_form_for [bot, message.training, message] do |f| %>
           <%= f.collection_select :answer_id, bot.answers, :id, :body %>
+          <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
           <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
         <% end %>
         <br />
