--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -3,38 +3,52 @@
     <span class="small"><%= message.parent.bot.name %></span><br />
     <%= image_tag message.parent.bot.image_url || 'operator', class: 'listen' %>
   </div>
-  <div class="col-sm-8 col-xs-9 balloon-1-left balloon">
-    <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
-      <span id="last-message" />
-      <% if message.class == TrainingMessage %>
-        <% if message.answer.present? %>
-          <%= bootstrap_form_for [bot, message.training, message.answer] do |f| %>
+  <div class="col-sm-8 col-xs-9">
+    <div class="col-sm-12 balloon-1-left balloon">
+      <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
+        <span id="last-message" />
+        <% if message.class == TrainingMessage %>
+          <% if message.answer.present? %>
+            <%= bootstrap_form_for [bot, message.training, message.answer] do |f| %>
+              <%= f.text_area :body, hide_label: true %>
+              <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
+              <%= f.submit '更新する', class: 'btn btn-primary' %>
+            <% end %>
+          <% else %>
+            <%= text_area_tag :body, message.body, class: 'form-control', readonly: true %>
+          <% end %>
+          <br />
+          <%= bootstrap_form_for [bot, message.training, message] do |f| %>
+            <%= f.collection_select :answer_id, bot.answers, :id, :body %>
+            <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
+            <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+          <% end %>
+          <br />
+          <%= bootstrap_form_for Answer.new, url: replace_bot_training_answer_path(bot, message.training, message) do |f| %>
             <%= f.text_area :body, hide_label: true %>
             <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-            <%= f.submit '更新する', class: 'btn btn-primary' %>
+            <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
           <% end %>
         <% else %>
-          <%= text_area_tag :body, message.body, class: 'form-control', readonly: true %>
-        <% end %>
-        <!-- <br /> -->
-        <%#= bootstrap_form_for [bot, message.training, message] do |f| %>
-          <%#= f.collection_select :answer_id, bot.answers, :id, :body %>
-          <%#= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-          <%#= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
-        <%# end %>
-        <br />
-        <%= bootstrap_form_for Answer.new, url: replace_bot_training_answer_path(bot, message.training, message) do |f| %>
-          <div class="form-group">
-            <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
-          </div>
-          <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-          <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+          <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
         <% end %>
       <% else %>
-      <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
+        <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
       <% end %>
-    <% else %>
-      <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
+    </div>
+    <% if message.answer.try(:decision_branches).try(:present?) %>
+      <div class="col-sm-12">
+        <br />
+        <% message.answer.decision_branches.each do |decision_branch| %>
+        <div class="col-sm-12">
+          <%= bootstrap_form_for decision_branch, url: bot_chats_choices_path(message.parent.bot, decision_branch), method: :post,remote: true do |f| %>
+            <%= submit_tag decision_branch.body, class: 'btn btn-default col-sm-6' %>
+            <%= f.hidden_field :id  %>
+            <%#= hidden_field_tag :body, decision_branch.body %>
+          <% end %>
+        </div>
+        <% end %>
+      </div>
     <% end %>
   </div>
   <div class="col-sm-2"></div>
