--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -5,9 +5,9 @@
   <div class="col-sm-8 col-sm-offset-2">
     <% @training.training_messages.each do |training_message| %>
       <% if training_message.bot? %>
-        <%= render 'chats/bot', bot: @bot, messages: @training.training_messages, message: training_message %>
+        <%= render 'bot', bot: @bot, messages: @training.training_messages, message: training_message %>
       <% elsif training_message.guest? %>
-        <%= render 'chats/guest', message: training_message %>
+        <%= render 'guest', message: training_message %>
       <% end %>
       <br />
     <% end %>
